--- a/cadastro-cerejo/login-cerejo.html
+++ b/cadastro-cerejo/login-cerejo.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-login.css">
 </head>
 
 <body>
@@ -34,11 +34,11 @@
         } else {
             tentativas--;
             if (tentativas <= 0){
-                div_mensagem.innerHTML = `Falha de autenticação: Usuário BLOQUEADO!`;
-                div_tentativa.innerHTML = ``;
+                div_mensagem.innerHTML = ``;
+                div_tentativa.innerHTML = `Falha de autenticação: Usuário BLOQUEADO!`;
             } else {
-                div_mensagem.innerHTML = `Falha na autenticação!`;
-                div_tentativa.innerHTML = `Você ainda tem ${tentativas} tentativa(s)`;
+                div_mensagem.innerHTML = ``;
+                div_tentativa.innerHTML = `Falha na autenticação!<br>Você ainda tem ${tentativas} tentativa(s)`;
             }
         }
     }
