Adicionei telas da dashboard em processo

--- a/login_cadastro_Kamilly/Login.html
+++ b/login_cadastro_Kamilly/Login.html
@@ -7,12 +7,12 @@
   <title>Login</title>
 </head>
 
-<body style="background-image: url(/home/aluno/Imagens/back.png); background-size: cover;">
+<body style="background-image: url(back.png); background-size: cover;">
   <h1 style="text-align: left; color: aliceblue;">HDP</h1>
   <center>
     
     <hr><br><br><br><br>
-    <div style="background-color: #ffe3af91;border-radius: 10%; width: 300px; padding: 30px; border: 5px solid; border-color: rgb(255, 255, 255);">
+    <div style="background-color: #ffe3af91;border-radius: 10%; width: 300px; padding: 30px; border: 8px solid; border-color: rgb(255, 255, 255);">
 
       <h3>Login</h3>
       <div style="text-align: left;">
@@ -24,7 +24,7 @@
       <button onclick="window.location.reload()">LIMPAR</button>
       <button onclick="entrar()">ENTRAR</button><br><br>
       <b>Caso não tenha cadastro: </b>
-      <a href="/home/aluno/Área de Trabalho/KamillyLogin/cadastro.html"><button>CADASTRAR</button></a>
+      <a href="cadastro.html"><button>CADASTRAR</button></a>
 
     </div>
   </center>
