--- a/cadastro-miralha/login.html
+++ b/cadastro-miralha/login.html
@@ -11,13 +11,13 @@
    <h1> Faça seu cadastro!</h1>
    <div class="blocopai">
 
-  Nome: <input id="demo2" type="text" id="input_nome" placeholder="Insira seu nome"> <br>
+  Nome: <input id="demo2" type="text" id="input_nome"> <br>
 
-  Email:<input id="demo3" type="text" id="input_email" placeholder="Insira seu email"> <br>
+  Email:<input id="demo3" type="text" id="input_email"> <br>
 
-   CPF:<input id="demo4" type="text" id="input_cpf" placeholder="Insira seu CPF"> <br>
+   CPF:<input id="demo4" type="text" id="input_cpf"> <br>
 
-   Senha:<input id="demo5" type="password" id="input_senha" placeholder="Insira sua senha"> <br>
+   Senha:<input id="demo5" type="text" id="input_senha"> <br>
    <div id="div_mensagem"></div>
 </div>
 
