--- a/desenv hdp/pg-documentos-dashboard.html
+++ b/desenv hdp/pg-documentos-dashboard.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>DASHBOARD | Documentos</title>
 </head>
 <body>
@@ -35,8 +36,8 @@
             </div>
             <select id="select_ordemExibicao">
                 <option selected disabled value="0">Ordem de Exibição</option>
-                <option value="1">Maior para Menor</option>
-                <option value="2">Menor para Maior</option>
+                <option onclick="ordem()" value="1">Maior para Menor</option>
+                <option onclick="ordem()" value="2">Menor para Maior</option>
             </select>
             <select id="select_condicaoDoc">
                 <option selected disabled value="0">Condição do Documento</option>
@@ -59,3 +60,37 @@
     </div>
 </body>
 </html>
+
+<script>
+    function ordem() {
+        var ordemExibicao = Number(select_ordemExibicao.value);
+
+        if(ordemExibicao == 1){
+            div_mensagem.innerHTML = `
+                1º Carta de Pero Vaz de Caminha (1500)                      ID Sala 1<br>
+                2º Tratado de Tordesilhas (1494)                            ID Sala 1<br>
+                3º Diário de Pero Magalhães Gândavo (1576)                  ID Sala 5<br>
+                4º Naufrágios (1552)                                        ID Sala 3<br>
+                5º Poema da Virgem (1591)                                   ID Sala 3<br>
+                6º Brasil e de suas Capitanias (1584)                       ID Sala 4<br>
+                7º História da Província de Santa Cruz (1617)               ID Sala 2<br>
+                8º Relação da Viagem à Paraíba (1615)                       ID Sala 2<br>
+                9º Tratado Descritivo do Brasil (1587)                      ID Sala 1<br>
+                10º Diálogo das Grandezas do Brasil (1618)                  ID Sala 5<br>
+            `;
+        } else {
+            div_mensagem.innerHTML = `
+                10º Diálogo das Grandezas do Brasil (1618)                  ID Sala 5<br>
+                9º Tratado Descritivo do Brasil (1587)                      ID Sala 1<br>
+                8º Relação da Viagem à Paraíba (1615)                       ID Sala 2<br>
+                7º História da Província de Santa Cruz (1617)               ID Sala 2<br>
+                6º Brasil e de suas Capitanias (1584)                       ID Sala 4<br>
+                5º Poema da Virgem (1591)                                   ID Sala 3<br>
+                4º Naufrágios (1552)                                        ID Sala 3<br>
+                3º Diário de Pero Magalhães Gândavo (1576)                  ID Sala 5<br>
+                2º Tratado de Tordesilhas (1494)                            ID Sala 1<br>
+                1º Carta de Pero Vaz de Caminha (1500)                      ID Sala 1<br>
+            `;
+        }
+    }
+</script>
