--- a/cadastro-patroni/Site_PatroniAtt1.html
+++ b/cadastro-patroni/Site_PatroniAtt1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="header"> 
-    <img src="Capturar.png" alt="" style="width: 120px;"> 
+    <img src="Captura_de_tela_de_2024-04-18_14-29-53-removebg-preview.png" alt="" style="width: 120px;"> 
       <div class="container">
             <ul class="navbar">
                 <li>HOME</li>
@@ -85,7 +85,41 @@
   <div class="pagina1final">
   </div>
 
+  <div class="banner2">
+    <div class="teste2">
+      <p class="texto3">A HDP é uma empresa inovadora que tem como missão
+        principal proteger o patrimônio histórico e cultural de
+        nossos clientes. Utilizando tecnologia de ponta, como o
+        Arduino UNO e o sensor DHT11, oferecemos soluções
+        eficientes para monitoramento e controle de
+        temperatura e umidade em ambientes que abrigam
+        acervos valiosos. Com uma equipe dedicada e
+        especializada, estamos comprometidos em
+        proporcionar tranquilidade e segurança para
+        instituições que valorizam a preservação da história.</p> <img src="missao.png" alt="" class="img6">
+    </div>
+  </div>
+  <div class="pagina1final"></div>
 
+  <div class="banner">
+    <p class="texto4">Quer descobrir quanto você irá economizar? Use a
+      nossa calculadora financeira!</p>
+     <div class="teste3">
+      <img src="desenho-de-adesivo-com-calculadora-isolada_1308-60994.avif" alt="" class="img7"> 
+        <p class="texto5">Nossa calculadora financeira é uma ferramenta 
+          poderosa para demonstrar o impacto de nossa solução 
+          na sua instituição. Descubra quanto você está perdendo 
+          atualmente devido à má gestão de temperatura e 
+          umidade e veja o potencial de economia e preservação 
+          que a HDP pode oferecer. Com dados precisos e 
+          análises detalhadas, ajudamos você a tomar decisões 
+          informadas para proteger seu valioso acervo.</p>
+          <div class="teste4">
+            <p class="texto6">Ir para a calculadora</p>
+          </div>
+      </div>
+    
+  </div>
 
  
     
