--- a/site.institucional.viniciusmiralha/site.html
+++ b/site.institucional.viniciusmiralha/site.html
@@ -1,90 +1,127 @@
 <!DOCTYPE html>
-<html lang="ptbr">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Institucional</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
 
-    <div class="container">
-        <ul class="navbar">
-            <li>Home</li>
-            <li>Sobre nós</li>
-            <li>Contato</li>
-            <li>Cadastro</li>
-        </ul>
-        <img src="" alt="" class="logo">
-    </div>
-    </div>
-
-    <div class="banner">
+    <div class="header">
+        <img src="logohdp.site.institucional.viniciusmiralha.png" alt="" style="width: 200px;;">
         <div class="container">
-            <h1>HDP
-                Historical Document
-                Preservation <span>evoluir</span> no futuro</h1>
+            <ul class="navbar">
+                <li>Início</li>
+                <li>|</li>
+                <li>Sobre Nós</li>
+                <li>|</li>
+                <l1>Contato</l1>
+                <li>|</li>
+                <li>Cadastro</li>
+            </ul>
+        </div>
+    </div>
+    <div class="pagina1_bloco">
+        <div class="logo"><img src="HDP__1_-removebg-preview.png" alt="" class="img1">
+            <div class="texto1">
+                <p>Com mais de 60% dos acervos
+                    históricos de museus sofrendo
+                    danos devido à má gestão de
+                    temperatura e umidade, é hora
+                    de investir em soluções que
+                    preservem o passado sem
+                    comprometer o presente
+                    financeiro da sua instituição.
+                    Junte-se a nós na missão de
+                    proteger e conservar a história
+                    para as gerações futuras</p>
+            </div>
         </div>
     </div>
 
-    <div class="social">
-        <div class="container">
 
-            <div class="card">
-                <img src="" alt="">
+    <div class="pagina1final">
+    </div>
 
-                <p>Mais de 60%dos livros e
+    <div class="banner">
+        <div class="teste1">
+            <div class="foto1"> <img src="livros.antigos.imagem.jpg" alt="" class="img2">
+                <p class="paragrafo1">Na HDP, reconhecemos que a
+                    preservação de acervos históricos e
+                    documentos é crucial. Por isso, optamos
+                    por monitorar de perto as métricas de
+                    temperatura e umidade. Manter esses
+                    parâmetros dentro dos ideais -
+                    temperatura entre 16 e 20°C e umidade
+                    entre 30 e 60% - é fundamental para
+                    evitar danos aos materiais históricos.
+                    Com o sensor DHT11 conectado ao
+                    Arduino UNO, garantimos um controle
+                    preciso dessas variáveis, reduzindo em
+                    até 60% as chances de perda de livros e
+                    documentos.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="banner">
+        <div class="teste2">
+            <div class="temp"><img src="icone.livros.jpg" alt="" class="img3">
+                <p class="texto2"> Mais de 60%dos livros e
                     documentos históricos são
                     perdidos por ano, devido
                     ao controle indevido de
                     temperatura e umidade.</p>
             </div>
-            <div class="card">
-                <img src="https://cdn-icons-png.flaticon.com/512/1086/1086431.png" alt="">
-
-                <p>É de extrema importância
+            <div class="temp"><img src="temperatura.icone.ofc.png" alt="" class="img4">
+                <p class="texto2">É de extrema importância
                     manter a temperatura ideal
                     em seus acervos para
                     evitar danos irreversíveis
                     causados pela degradação
                     do papel.</p>
             </div>
-            <div class="card">
-                <img src="https://cdn-icons-png.flaticon.com/512/10483/10483248.png" alt="">
-
-                <p>Manter a umidade ideal nos
+            <div class="temp"><img
+                    src="umidade.icone.ofc.png"
+                    alt="" class="img5">
+                <p class="texto2">Manter a umidade ideal nos
                     acervos é importante para
                     preservar a integridade
                     física dos livros. Umidade
                     excessiva pode levar à
                     proliferação de fungos e
-                    mofos.</p>
-            </div>
-        </div>
-
-
-        <div class="footer">
-            <div class="container">
-                <p>A HDP é uma empresa inovadora que tem como missão
-                    principal proteger o patrimônio histórico e cultural de
-                    nossos clientes. Utilizando tecnologia de ponta, como o
-                    Arduino UNO e o sensor DHT11, oferecemos soluções
-                    eficientes para monitoramento e controle de
-                    temperatura e umidade em ambientes que abrigam
-                    acervos valiosos. Com uma equipe dedicada e
-                    especializada, estamos comprometidos em
-                    proporcionar tranquilidade e segurança para
-                    instituições que valorizam a preservação da história.</p>
+                    mofos</p>
             </div>
         </div>
     </div>
-    <div class="social">
-        <div class="container">
-            <p style="color: yellow;">Quer descobrir quanto você irá economizar? Use a
-                nossa calculadora financeira!</p>
-            <p>Nossa calculadora financeira é uma ferramenta
+    <div class="pagina1final">
+    </div>
+
+    <div class="banner2">
+        <div class="teste2">
+            <p class="texto3">A HDP é uma empresa inovadora que tem como missão
+                principal proteger o patrimônio histórico e cultural de
+                nossos clientes. Utilizando tecnologia de ponta, como o
+                Arduino UNO e o sensor DHT11, oferecemos soluções
+                eficientes para monitoramento e controle de
+                temperatura e umidade em ambientes que abrigam
+                acervos valiosos. Com uma equipe dedicada e
+                especializada, estamos comprometidos em
+                proporcionar tranquilidade e segurança para
+                instituições que valorizam a preservação da história.</p> <img src="objetivo.icon-removebg-preview.png" alt="" class="img6">
+        </div>
+    </div>
+    <div class="pagina1final"></div>
+
+    <div class="banner">
+        <p class="texto4">Quer descobrir quanto você irá economizar? Use a
+            nossa calculadora financeira!</p>
+        <div class="teste3">
+            <img src="calculadora.icone.ofc.jpg" alt="" class="img7">
+            <p class="texto5">Nossa calculadora financeira é uma ferramenta
                 poderosa para demonstrar o impacto de nossa solução
                 na sua instituição. Descubra quanto você está perdendo
                 atualmente devido à má gestão de temperatura e
@@ -92,14 +129,15 @@
                 que a HDP pode oferecer. Com dados precisos e
                 análises detalhadas, ajudamos você a tomar decisões
                 informadas para proteger seu valioso acervo.</p>
-        </div>
-    </div>
-
-    <div class="footer">
-        <div class="container">
-            Sobre nós
+            <div class="teste4">
+                <p class="texto6">Ir para a calculadora</p>
+            </div>
         </div>
 
     </div>
+
+
 
 </body>
+
+</html>
