--- a/cadastro-cerejo/login-cerejo.html
+++ b/cadastro-cerejo/login-cerejo.html
@@ -35,7 +35,7 @@
             tentativas--;
             if (tentativas <= 0){
                 div_mensagem.innerHTML = ``;
-                div_tentativa.innerHTML = `Falha de autenticação: Usuário BLOQUEADO!`;
+                div_tentativa.innerHTML = `Falha de autenticação: Usuário BLOQUEADO temporariamente!`;
             } else {
                 div_mensagem.innerHTML = ``;
                 div_tentativa.innerHTML = `Falha na autenticação!<br>Você ainda tem ${tentativas} tentativa(s)`;
