--- a/Telas da Dashboard/index.html
+++ b/Telas da Dashboard/index.html
@@ -12,13 +12,18 @@
 <body>
     <div class="header">
         <div class="container">
-            <ul class="navbar">
-                <li>Home</li>
-                <li>Sobre nós</li>
-                <li>|</li>
-                <li style="color: rgb(221, 148, 13);">Dashboard</li>
-                <li>Sair</li>
-            </ul>
+            <div class="blocoNavbar">
+                <ul class="navbar">
+                    <li>Início</li>
+                    <li>Sobre nós</li>
+                    <li>|</li>
+                    <li style="color: rgb(221, 148, 13);">Dashboard</li>
+                    <li>Sair</li>
+                </ul>
+
+            </div>
+            <div class="trianguloDireita"></div>
+            <div class="logo"></div>
         </div>
     </div>
     <div class="corpoGeral">
@@ -37,43 +42,64 @@
             </div>
         </div>
         <div class="conteudo">
-            <div class="titulo">
-                <h4><strong>DASHBOARD</strong></h4>
-                <p>OVERVIEW</p>
+            <div class="alerta">
+                <div class="titulo">
+                    <h4><strong>DASHBOARD</strong></h4>
+                    <p>OVERVIEW</p>
+                </div>
+                <div><img src="https://cdn-icons-png.flaticon.com/512/5626/5626190.png" alt=""></div>
             </div>
+
+
             <div class="cardGeral">
                 <div class="card">
                     <div class="cardInt">
-                        <h1>2/5</h1>
-                        <h4 style="font-size: 90%;">Registros do sensor</h4>
+                        <h1>6/10</h1>
+                        <h4 style="font-size: 120%;">Salas com registros</h4>
                         <h5>Fora do ideal</h5>
                     </div>
-                    <div> <a href="tela-info1.html"><button onclick="info1()">SAIBA MAIS</button></a></div>
+                    <div><a href="tela-info1.html"><button>SAIBA MAIS</button></a></div>
+                    <div class="infoExtra">
+                        <div class="textoExtra">
+                        <span>Salas registram Temperatura ou Umidade fora do ideal<p>Seus livros e documentos podem
+                            estar em
+                            risco devido aos registros inadequados de temperatura umidade nas salas.</p></span>
+                        </div>
+                        <div class="trianguloBaixo"></div>
+                        <div class="cardIntExtra">
+                        </div>
+                    </div>
                 </div>
                 <div class="card">
                     <div class="cardInt">
-                        <h1 style="color: #B62727;">3.5hrs</h1>
-                        <h4>2 | 5</h4>
+                        <h1 style="color: #B62727;">2 hrs</h1>
+                        <h4>4 | 6</h4>
                         <h5>Salas</h5>
                     </div>
-                    <div><button onclick="info2()">SAIBA MAIS</button></div>
+                    <div><a href="tela-info2.html"><button>SAIBA MAIS</button></a></div>
+                    <div class="infoExtra">
+                        <div class="textoExtra">
+                        <span>Tempo que Salas Ficaram em Condições Inadequadas<p>Seus livros e documentos podem
+                                estar em
+                                risco devido ao grande período de tempo em condições inadequadas.</p></span>
+                            </div>
+                        <div class="trianguloBaixo">
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="cardExtra">
-                <div class="infoExtra">
-                    <div class="cardIntExtra">
-                    </div>
-                    <!-- <div><button onclick="info1()">SAIBA MAIS</button></div> -->
-                </div>
-                <div class="infoExtra">
-                    <div class="cardIntExtra">
 
-                    </div>
-                    <!-- <div><button onclick="info2()">SAIBA MAIS</button></div> -->
-                </div>
-            </div>
+
+
+
+
+
+
         </div>
     </div>
 </body>
+<script>
+
+</script>
 
 </html>
