--- a/calculadora-financeira-HDP/index.html
+++ b/calculadora-financeira-HDP/index.html
@@ -9,7 +9,17 @@
 </head>
 
 <body>
-
+    <div class="header">
+        <img src="download.png" alt="logo">
+        <ul class="navbar">
+            <li>Home</li>
+            <li>Sobre Nós</li>
+            <li>Contato</li>
+            <li>|</li>
+            <li>Cadastro</li>
+            <li>Login</li>
+        </ul>
+    </div>
     <div id="box">
         <center>
             <strong>Historical Document Preservation - Simulador Financeiro</strong><br><br>
@@ -29,7 +39,7 @@
                     id="input_restauracao"><br>
                 <button onclick="calcular()">Calcular</button>
                 <button onclick="window.location.reload()">Limpar</button>
-                
+
 
             </div>
             <div id="div_mensagem"></div>
